# pdmr-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  DEPLOY.md  Dockerfile  Makefile  PROGRESS.md  README.md  alembic.ini  config.py  database.py  docker-compose.yml  models.py  pyproject.toml  render.yaml  schemas.py  seed.py  start.sh
.github/: README.md
.github/workflows/: ci.yml  refresh.yml
alembic/: env.py
alembic/versions/: 350be33f35b9_add_country_to_filings.py  8080915fbb98_initial_schema.py
api/: deps.py  main.py  routes.py
scraper/: afm_nl.py  amf_fr.py  bg.py  emarketstorage.py  fca_uk.py  fi_sweden.py  fsma_be.py  http.py  ingest.py  nasdaq_nordic.py  oneinfo.py  oslo_bors_no.py  parser.py  scheduler.py  six_ch.py  store.py
static/: index.html  landing.html
tests/: conftest.py  test_afm_nl.py  test_amf_fr.py  test_api.py  test_config.py  test_fca_uk.py  test_fi_sweden.py  test_fsma_be.py  test_ingest_resilience.py  test_nasdaq_nordic.py  test_oneinfo.py  test_oslo_bors_no.py  test_parser.py  test_scheduler.py  test_scraper.py  test_six_ch.py
tests/fixtures/: afm_nl_detail.html  afm_nl_index.xml  emarketstorage_listing.html  fca_uk_rns.html  fca_uk_search.json  fi_sweden_sample.csv  fsma_be_detail.html  fsma_be_listing.html  nasdaq_body_finland.txt  nasdaq_listing.json  nasdaq_mar_copenhagen.txt  nasdaq_mar_iceland.txt  nasdaq_mar_lithuania.txt  oneinfo_listing.json  oslo_krt1500.txt  six_ch_overview.json
